--- a/index.html
+++ b/index.html
@@ -15,11 +15,44 @@
 <body class="application">
     <div class="application__template">
         <header class="application__header header" id="header">
-            <!-- контент шапки сайта -->
+            <div class="header__container nav">
+                <a href="" class="nav__logo">
+                    <img src="" alt="Логотип GTHREES" class="nav__logo-icon">
+                </a>
+                <ul class="nav__menu">
+                    <li class="nav__menu-item navitem">
+                        <a href="" class="navitem__item">Наши услуги</a>
+                    </li>
+                    <li class="nav__menu-item navitem">
+                        <a href="" class="navitem__item">Контакты</a>
+                    </li>
+                    <li class="nav__menu-item navitem">
+                        <a href="tel:375295462567" class="navitem__numberr">+375(29)546-25-67</a>
+                    </li>
+                </ul>   
+                <button class="nav__language">
+                    <span class="nav__language-text">RU</span>
+                    <img src="" alt="" class="nav__language-icon">
+                </button>
+                <button class="nav__button">
+                    <span>Получить рассчёт</span>
+                    <img src="" alt="Значок стрелки" class="nav__button-arrow">
+                </button>
+                <button class="nav__modal">
+                    <img src="" alt="Иконка меню" class="nav__modal-icon">
+                </button>
+            </div>
         </header>
         <main class="application__main main" id="main">
             <div class="main__content" id="main-content">
-                <!-- контент страницы сайта -->                
+                <section class="general">
+                    <div class="general__container welcome">
+                        <div class="welcome__upper"></div>
+                        <div class="welcome__bottom">
+
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <footer class="application__footer footer">
