--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body class="application">
     <div class="application__template">
         <header class="application__header header" id="header">
-            <div class="header__container nav">
-                <a href="" class="nav__logo">
-                    <img src="" alt="Логотип GTHREES" class="nav__logo-icon">
+            <div class="header__container container nav">
+                <a href="#!" class="nav__logo">
+                    <img src="/assets/img/icons/logo.svg" alt="Логотип GTHREES" class="nav__logo-icon">
                 </a>
                 <ul class="nav__menu">
                     <li class="nav__menu-item navitem">
@@ -27,19 +27,19 @@
                         <a href="" class="navitem__item">Контакты</a>
                     </li>
                     <li class="nav__menu-item navitem">
-                        <a href="tel:375295462567" class="navitem__numberr">+375(29)546-25-67</a>
+                        <a href="tel:375295462567" class="navitem__number">+375(29)546-25-67</a>
                     </li>
                 </ul>   
                 <button class="nav__language">
                     <span class="nav__language-text">RU</span>
-                    <img src="" alt="" class="nav__language-icon">
+                    <img src="assets/img/icons/arrow-lng.svg" alt="" class="nav__language-icon">
                 </button>
                 <button class="nav__button">
                     <span>Получить рассчёт</span>
-                    <img src="" alt="Значок стрелки" class="nav__button-arrow">
+                    <img src="assets/img/icons/arrow.svg" alt="Значок стрелки" class="nav__button-arrow">
                 </button>
-                <button class="nav__modal">
-                    <img src="" alt="Иконка меню" class="nav__modal-icon">
+                <button class="nav__burger">
+                    <img src="assets/img/icons/burger.svg" alt="Иконка меню" class="nav__burger-icon">
                 </button>
             </div>
         </header>
@@ -49,7 +49,7 @@
                     <div class="general__container welcome">
                         <div class="welcome__upper"></div>
                         <div class="welcome__bottom">
-
+                                
                         </div>
                     </div>
                 </section>
