--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
                 </a>
                 <ul class="nav__menu">
                     <li class="nav__menu-item navitem">
-                        <a href="" class="navitem__item">Наши услуги</a>
+                        <a href="" class="navitem__item">
+                            <span class="navitem__item-text">Наши услуги</span>
+                            <img src="assets/img/icons/arrow-lng.svg" alt="" class="navitem__item-image">
+                        </a>
+                        
                     </li>
                     <li class="nav__menu-item navitem">
                         <a href="" class="navitem__item">Контакты</a>
                     </li>
                     <li class="nav__menu-item navitem">
-                        <a href="tel:375295462567" class="navitem__number">+375(29)546-25-67</a>
+                        <a href="tel:375295462567" class="navitem__item">+375(29)546-25-67</a>
                     </li>
                 </ul>   
                 <button class="nav__language">
@@ -35,7 +39,7 @@
                     <img src="assets/img/icons/arrow-lng.svg" alt="" class="nav__language-icon">
                 </button>
                 <button class="nav__button">
-                    <span>Получить рассчёт</span>
+                    <span class="nav__button-text">Получить рассчёт</span>
                     <img src="assets/img/icons/arrow.svg" alt="Значок стрелки" class="nav__button-arrow">
                 </button>
                 <button class="nav__burger">
@@ -48,8 +52,18 @@
                 <section class="general">
                     <div class="general__container welcome">
                         <div class="welcome__upper"></div>
-                        <div class="welcome__bottom">
-                                
+                        <div class="welcome__bottom wbot">
+                            <img src="assets/img/icons/title.svg" alt="" class="wbot__text">
+                            <div class="wbot__desc">
+                                <h1 class="wbot__desc-title">ТРАНСПОРТНО — <br> ЭКСПЕДИЦИОННАЯ <br> <span class="wbot__desc-titleComp">КОМПАНИЯ</span></h1>
+                                <div class="wbot__desc-subtitle servicelevel">
+                                    <p class="servicelevel__text">Мы стремимся обеспечить высокий уровень сервиса, предлагая Вам наилучшее решение с точки зрения стоимости, качества и времени.</p>
+                                    <a href="#!" class="servicelevel__button">
+                                        <h2 class="servicelevel__button-text">получить консультацию</h2>
+                                        <img src="assets/img/icons/arrow.svg" alt="" class="servicelevel__button-icon">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
