--- a/index.html
+++ b/index.html
@@ -58,11 +58,28 @@
                                 <h1 class="wbot__desc-title">ТРАНСПОРТНО — <br> ЭКСПЕДИЦИОННАЯ <br> <span class="wbot__desc-titleComp">КОМПАНИЯ</span></h1>
                                 <div class="wbot__desc-subtitle servicelevel">
                                     <p class="servicelevel__text">Мы стремимся обеспечить высокий уровень сервиса, предлагая Вам наилучшее решение с точки зрения стоимости, качества и времени.</p>
-                                    <a href="#!" class="servicelevel__button">
+                                    <a href="#!" class="servicelevel__button"> <!-- Через абсолют -->
                                         <h2 class="servicelevel__button-text">получить консультацию</h2>
                                         <img src="assets/img/icons/arrow.svg" alt="" class="servicelevel__button-icon">
                                     </a>
                                 </div>
+                            </div>
+                            <div class="wbot__buttons wbut">
+                                <div class="wbut__slider">
+                                    <img src="" alt="" class="wbut__slider-arrow left">
+                                    <img src="" alt="" class="wbut__slider-arrow right">
+                                </div>
+                                <div class="wbut__social">
+                                    <a href="" class="wbut__social-links"></a>
+                                    <a href="" class="wbut__social-links"></a>
+                                    <a href="" class="wbut__social-links"></a>
+                                </div>
+                            </div>
+                            <div class="wbot__messenger">
+                                <img src="" alt="" class="wbot__messenger-icon">
+                                <img src="" alt="" class="wbot__messenger-icon">
+                                <img src="" alt="" class="wbot__messenger-icon">
+                                <img src="" alt="" class="wbot__messenger-icon">
                             </div>
                         </div>
                     </div>
