--- a/index.html
+++ b/index.html
@@ -66,20 +66,24 @@
                             </div>
                             <div class="wbot__buttons wbut">
                                 <div class="wbut__slider">
-                                    <img src="" alt="" class="wbut__slider-arrow left">
-                                    <img src="" alt="" class="wbut__slider-arrow right">
+                                    <a href="" class="wbut__slider-left">
+                                        <img src="assets/img/icons/arrowslider.svg" alt="Стрелка назад" class="wbut__slider-leftArrow warrow">
+                                    </a>
+                                    <a href="" class="wbut__slider-right warrow">
+                                        <img src="assets/img/icons/arrowslider.svg" alt="Стрелка вперед" class="wbut__slider-rightArrow">
+                                    </a>
                                 </div>
                                 <div class="wbut__social">
-                                    <a href="" class="wbut__social-links"></a>
-                                    <a href="" class="wbut__social-links"></a>
-                                    <a href="" class="wbut__social-links"></a>
+                                    <a href="#!" class="wbut__social-links">FACEBOOK</a>
+                                    <a href="#!" class="wbut__social-links">INSTAGRAM</a>
+                                    <a href="#!" class="wbut__social-links">LINKEDIN</a>
                                 </div>
                             </div>
                             <div class="wbot__messenger">
-                                <img src="" alt="" class="wbot__messenger-icon">
-                                <img src="" alt="" class="wbot__messenger-icon">
-                                <img src="" alt="" class="wbot__messenger-icon">
-                                <img src="" alt="" class="wbot__messenger-icon">
+                                <img src="assets/img/icons/whatsapp.svg" alt="Значок whatsapp" class="wbot__messenger-icon">
+                                <img src="assets/img/icons/viber.svg" alt="Значок viber" class="wbot__messenger-icon">
+                                <img src="assets/img/icons/skype.svg" alt="Значок skype" class="wbot__messenger-icon">
+                                <img src="assets/img/icons/telegram.svg" alt="Значок telegram" class="wbot__messenger-icon">
                             </div>
                         </div>
                     </div>
