--- a/company.html
+++ b/company.html
@@ -208,9 +208,9 @@
                         <h2 class="stcont__title">Стратегические приоритеты</h2>
                         <div class="stcont__scroller">
                             <div class="stcont__scroller-images scrollerim">
-                                <img src="assets/img/images/strat1.png" alt="" class="scrollerim__images">
-                                <img src="assets/img/images/strat2.png" alt="" class="scrollerim__images">
-                                <img src="assets/img/images/strat3.png" alt="" class="scrollerim__images">
+                                <img src="assets/img/images/strat1.png" alt="" class="scrollerim__images currentim">
+                                <img src="assets/img/images/strat2.png" alt="" class="scrollerim__images nci">
+                                <img src="assets/img/images/strat3.png" alt="" class="scrollerim__images nci">
                             </div>
                             <div class="stcont__scroller-scrollbar scbar">
                                 <div class="scbar__acccent"></div>
