--- a/company.html
+++ b/company.html
@@ -188,18 +188,44 @@
                 <section class="managment">
                     <div class="managment__container macont">
                         <h2 class="macont__title">Руководство</h2>
-                        <div class="macont__manager">
-                            <h3 class="macont__manager-text">Обращение руководства</h3>
-                            <img src="" alt="" class="macont__manager-photo">
-                            <div class="macont__manager-name">Сергей <br>Смирнов</div>
-                            <div class="macont__manager-text">
-                                <img src="" alt="" class="macont__manager-text--icon">
-                                <p class="macont__manager-text--text">Создание благоприятной среды взаимопонимания и взаимоуважения всех участников цепочки поставок, соблюдая национальные и международные законы и правила, а также строгие этические принципы ведения бизнеса. <br> <br>
-                                    Наше видение и цель неразрывно связаны с постоянным стремлением к улучшению и оптимизации на протяжении всего жизненного цикла компании, что является ключевым элементом системы корпоративных ценностей.</p>
+                        <div class="macont__content manag">
+                            <div class="manag__line">
+                                <h3 class="manag__line-text">Обращение руководства</h3>
                             </div>
-                            <h3 class="macont__manager-special">Генеральный <br> директор</h3>
-                            <img src="" alt="" class="macont__manager-sign">
-
+                            <div class="manag__photo">
+                                <img src="assets/img/images/director.png" alt="" class="manag__photo-image">
+                                <h3 class="manag__photo-text">Генеральный директор</h3>
+                            </div>
+                            <div class="manag__info">
+                                <h3 class="manag__info-name">Сергей <br> <br> Смирнов</h3>
+                                <div class="manag__info-text mantext">
+                                    <img src="assets/img/icons/quots.svg" alt="" class="mantext__quot">
+                                    <p class="mantext__text">Создание благоприятной среды взаимопонимания и взаимоуважения всех участников цепочки поставок, соблюдая национальные и международные законы и правила, а также строгие этические принципы ведения бизнеса. <br> <br>
+                                        Наше видение и цель неразрывно связаны с постоянным стремлением к улучшению и оптимизации на протяжении всего жизненного цикла компании, что является ключевым элементом системы корпоративных ценностей. </p>
+                                </div>
+                                <img src="assets/img/icons/signature.svg" alt="" class="manag__info-sign">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="achievements__container acont">
+                        <h2 class="acont__title">Наши достижения</h2>
+                        <div class="acont__cards">
+                            <div class="acont__cards-card">
+                                <p class="acont__cards-card--title">Частота загрузок</p>
+                                <h2 class="acont__cards-card--number">61 мин.</h2>
+                            </div>
+                            <div class="acont__cards-card">
+                                <p class="acont__cards-card--title">Грузов перевезено</p>
+                                <h2 class="acont__cards-card--number">287 тыс.</h2>
+                            </div>
+                            <div class="acont__cards-card">
+                                <p class="acont__cards-card--title">Количество партнёров</p>
+                                <h2 class="acont__cards-card--number">3 165</h2>
+                            </div>
+                            <div class="acont__cards-card">
+                                <p class="acont__cards-card--title">Пройденное расстояние</p>
+                                <h2 class="acont__cards-card--number">42 млн. км</h2>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -222,6 +248,39 @@
                                 <h3 class="stcont__text-button--title">ОТПРАВИТЬ ЗАЯВКУ</h3>
                                 <img src="assets/img/icons/arrow.svg" alt="" class="stcont__text-button--image">
                             </a>
+                        </div>
+                    </div>
+                </section>
+                <section class="history">
+                    <div class="history__container hcont">
+                        <h2 class="hcont__title">История развития компании</h2>
+                        <div class="hcont__content hist">
+                            <div class="hist_counter hico">
+                                <div class="hico__count">
+                                    <img src="assets/img/icons/circle.svg" alt="" class="hico__count-circle">
+                                    <h3 class="hico__count-year">20</h3>
+                                    <div class="hico__count-numbers hinu">
+                                        <h3 class="hinu__number">20</h3>
+                                        <h3 class="hinu__number currentnumber">21</h3>
+                                        <h3 class="hinu__number">22</h3>
+                                        <h3 class="hinu__number">23</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="hist__text htext">
+                                <div class="htext__content">
+                                    <h3 class="htext__content-date">Декабрь 2020</h3>
+                                    <p class="htext__content-text"> Обзор железнодорожного, автомобильного рынка в России, тенденции изменений рынка на будущий год, активная динамика. Обзор железнодорожного, автомобильного рынка в России, тенденции изменений рынка на будущий год, активная динамика.</p>
+                                </div>
+                                <div class="htext__content">
+                                    <h3 class="htext__content-date">Декабрь 2020</h3>
+                                    <p class="htext__content-text"> Обзор железнодорожного, автомобильного рынка в России, тенденции изменений рынка на будущий год, активная динамика. Обзор железнодорожного, автомобильного рынка в России, тенденции изменений рынка на будущий год, активная динамика.</p>
+                                </div>
+                                <div class="htext__content">
+                                    <h3 class="htext__content-date">Декабрь 2020</h3>
+                                    <p class="htext__content-text"> Обзор железнодорожного, автомобильного рынка в России, тенденции изменений рынка на будущий год, активная динамика. Обзор железнодорожного, автомобильного рынка в России, тенденции изменений рынка на будущий год, активная динамика.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
