--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                     <h3 class="wcard__nothover-title">Гарантии сохранности</h3>
                                     <div class="wcard__nothover-picture">
                                         <img src="assets/img/icons/c1.svg" alt=""
-                                            class="wcard__nothoveer-picture--icon">
+                                            class="wcard__nothover-picture--icon">
                                         <img src="assets/img/images/we1.png" alt="Изображение контейнеров"
                                             class="wcard__nothover-picture--image">
                                     </div>
@@ -344,12 +344,12 @@
                                         им приоритет в работе.</p>
                                 </div>
                             </div>
-                            <div class="wecont__cards-card wcard">
+                            <div class="wecont__cards-card wcard cardleft">
                                 <div class="wcard__nothover">
                                     <h3 class="wcard__nothover-title">Экологические стандарты</h3>
                                     <div class="wcard__nothover-picture">
                                         <img src="assets/img/icons/c2.svg" alt=""
-                                            class="wcard__nothoveer-picture--icon">
+                                            class="wcard__nothover-picture--icon">
                                         <img src="assets/img/images/we2.png" alt="Изображение контейнеров"
                                             class="wcard__nothover-picture--image">
                                     </div>
@@ -366,7 +366,7 @@
                                     <h3 class="wcard__nothover-title">Индивидуальный подход</h3>
                                     <div class="wcard__nothover-picture">
                                         <img src="assets/img/icons/c3.svg" alt=""
-                                            class="wcard__nothoveer-picture--icon">
+                                            class="wcard__nothover-picture--icon">
                                         <img src="assets/img/images/we3.png" alt="Изображение контейнеров"
                                             class="wcard__nothover-picture--image">
                                     </div>
@@ -378,12 +378,12 @@
                                         им приоритет в работе.</p>
                                 </div>
                             </div>
-                            <div class="wecont__cards-card wcard">
+                            <div class="wecont__cards-card wcard cardleft">
                                 <div class="wcard__nothover">
                                     <h3 class="wcard__nothover-title">Высокое качество услуг</h3>
                                     <div class="wcard__nothover-picture">
                                         <img src="assets/img/icons/c4.svg" alt=""
-                                            class="wcard__nothoveer-picture--icon">
+                                            class="wcard__nothover-picture--icon">
                                         <img src="assets/img/images/we4.png" alt="Изображение контейнеров"
                                             class="wcard__nothover-picture--image">
                                     </div>
