--- a/news.html
+++ b/news.html
@@ -103,12 +103,12 @@
                                     <img src="assets/img/images/news/1.jpg" alt="" class="necard__image-picture">
                                 </div>
                                 <div class="necard__date">
-                                    <h3 class="necard__number">22</h3>
-                                    <p class="necard__date">Декабря 2022</p>
+                                    <h3 class="necard__date-number">22</h3>
+                                    <p class="necard__date-date">Декабря 2022</p>
                                 </div>
                                 <div class="necard__text">
-                                    <h3 class="necard__text-title"></h3>
-                                    <p class="necard__text-subtitle"></p>
+                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги работы за 2018 год.</h3>
+                                    <p class="necard__text-subtitle">Создание благоприятной среды взаимопонимания и взаимоуважения всех участников цепочки поставок, соблюдая национальные и международные законы и правила, а также строгие этические принципы ведения бизнеса. Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения...</p>
                                     <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
                                 </div>
                             </a>
@@ -117,12 +117,12 @@
                                     <img src="assets/img/images/news/2.jpg" alt="" class="necard__image-picture">
                                 </div>
                                 <div class="necard__date">
-                                    <h3 class="necard__number">22</h3>
-                                    <p class="necard__date">Декабря 2022</p>
+                                    <h3 class="necard__date-number">22</h3>
+                                    <p class="necard__date-date">Декабря 2022</p>
                                 </div>
                                 <div class="necard__text">
-                                    <h3 class="necard__text-title"></h3>
-                                    <p class="necard__text-subtitle"></p>
+                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги.</h3>
+                                    <p class="necard__text-subtitle">Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения, основываясь на нашем опыте в следующих областях: транспортно-экспедиционное обслуживание клиентов. Наша компания предоставляет широкий спектр услуг по доставке грузов наземным, морским и воздушным транспортом...</p>
                                     <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
                                 </div>
                             </a>
@@ -131,12 +131,12 @@
                                     <img src="assets/img/images/news/3.jpg" alt="" class="necard__image-picture">
                                 </div>
                                 <div class="necard__date">
-                                    <h3 class="necard__number">22</h3>
-                                    <p class="necard__date">Декабря 2022</p>
+                                    <h3 class="necard__date-number">22</h3>
+                                    <p class="necard__date-date">Декабря 2022</p>
                                 </div>
                                 <div class="necard__text">
-                                    <h3 class="necard__text-title"></h3>
-                                    <p class="necard__text-subtitle"></p>
+                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги работы за 2018 год.</h3>
+                                    <p class="necard__text-subtitle">Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения, основываясь на нашем опыте в следующих областях: транспортно-экспедиционное обслуживание клиентов. Наша компания предоставляет широкий спектр услуг по доставке грузов наземным, морским и воздушным транспортом...</p>
                                     <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
                                 </div>
                             </a>
@@ -145,19 +145,55 @@
                                     <img src="assets/img/images/news/4.jpg" alt="" class="necard__image-picture">
                                 </div>
                                 <div class="necard__date">
-                                    <h3 class="necard__number">22</h3>
-                                    <p class="necard__date">Декабря 2022</p>
+                                    <h3 class="necard__date-number">22</h3>
+                                    <p class="necard__date-date">Декабря 2022</p>
                                 </div>
                                 <div class="necard__text">
-                                    <h3 class="necard__text-title"></h3>
-                                    <p class="necard__text-subtitle"></p>
+                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги.</h3>
+                                    <p class="necard__text-subtitle">Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения, основываясь на нашем опыте в следующих областях: транспортно-экспедиционное обслуживание клиентов. Наша компания предоставляет широкий спектр услуг по доставке грузов наземным, морским и воздушным транспортом...</p>
                                     <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
                                 </div>
                             </a>
                         </div>
                         <a href="#!" class="newsco__news-button">ПОКАЗАТЬ ЕЩЁ</a>
                     </div>
-                </section>    
+                </section> 
+                <section class="request rcont">
+                    <div class="rcont__footer rnfoot">
+                        <div class="rnfoot__top">
+                            <div class="rnfoot__top-coop rcoop">
+                                <h3 class="rcoop__title">Для сотрудничества</h3>
+                                <a href="mail: info@gthrees.com" class="rcoop__subtitle">info@gthrees.com</a>
+                            </div>
+                            <div class="rnfoot__top-num rnum">
+                                <a href="#!" class="rnum__button">
+                                    ПОДПИСАТЬСЯ
+                                </a>
+                                <div class="rnum__number">
+                                    <a href="#!" class="rnum__number-text">+375(17)252-22-25</a>
+                                </div>
+                
+                            </div>
+                            <div class="rnfoot__top-sell rsell">
+                                <h3 class="rsell__title">Отдел продаж:</h3>
+                                <a href="#!" class="rsell__subtitle">sales@gthrees.com</a>
+                            </div>
+                        </div>
+                        <div class="rnfoot__bottom rbot">
+                            <div class="rbot__copyright">
+                                <h3 class="rbot__copyright-title">© 2023, GTHREES</h3>
+                            </div>
+                            <div class="rbot__ref">
+                                <h3 class="rbot__ref-text">Разработано в</h3>
+                                <img src="assets/img/icons/likeit.svg" alt="" class="rbot__ref-image">
+                            </div>
+                        </div>
+                
+                    </div>
+                    <div class="request__rlogo">
+                        <img src="assets/img/icons/title.svg" alt="" class="request__rlogo-title">
+                    </div>
+                </section>
             </div>
         </main>
         <footer class="application__footer footer">
