--- a/index.html
+++ b/index.html
@@ -221,19 +221,19 @@
                         <div class="acont__cards">
                             <div class="acont__cards-card">
                                 <p class="acont__cards-card--title">Частота загрузок</p>
-                                <h2 class="acont__cards-card--number">61 мин.</h2>
+                                <h2 class="acont__cards-card--number"><span>61</span> мин.</h2>
                             </div>
                             <div class="acont__cards-card">
                                 <p class="acont__cards-card--title">Грузов перевезено</p>
-                                <h2 class="acont__cards-card--number">287 тыс.</h2>
+                                <h2 class="acont__cards-card--number"><span>287</span> тыс.</h2>
                             </div>
                             <div class="acont__cards-card">
                                 <p class="acont__cards-card--title">Количество партнёров</p>
-                                <h2 class="acont__cards-card--number">3 165</h2>
+                                <h2 class="acont__cards-card--number"><span>3 165</span></h2>
                             </div>
                             <div class="acont__cards-card">
                                 <p class="acont__cards-card--title">Пройденное расстояние</p>
-                                <h2 class="acont__cards-card--number">42 млн. км</h2>
+                                <h2 class="acont__cards-card--number"><span>42</span> млн. км</h2>
                             </div>
                         </div>
                     </div>
@@ -459,6 +459,7 @@
                                 <a href="#!" class="pcont__col-item--container bubilda">
                                     <h3 class="bubilda__text">СТАТЬ ПАРТНЕРОМ</h3>
                                     <img src="assets/img/icons/arrow.svg" alt="" class="bubilda__image">
+                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="bubilda__mobile">
                                 </a>
                             </div>
                         </div>
